[package]
name = "baby-jub"
version = "0.0.11"
authors = ["arnaucube <root@arnaucube.com>"]
edition = "2021"
license = "GPL-3.0"
description = "BabyJubJub elliptic curve implementation"
repository = "https://github.com/arnaucube/babyjubjub-rs"
readme = "README.md"

[dependencies]
ff = {package="ff_ce" , version= "0.13", features = ["derive"]}
rand = "0.8"
num = "0.4"
num-bigint = {version = "0.4", features = ["rand", "serde"]}
num-traits = "0.2.8"
blake-hash = {version="0.4.0", optional=true}
blake = {version="2.0.1", optional=true}
generic-array = "0.14"
poseidon-rs = { git = "https://github.com/kilb/poseidon-rs" }
arrayref = "0.3.5"
lazy_static = "1.4.0"
ark-serialize = { version = "^0.3.0", default-features = false, features = [ "derive" ] }
serde_derive = "1.0.151"
serde = { version = "1.0.151", features = [ "derive" ] }

[dev-dependencies]
criterion = "0.3"
hex = "0.4"
serde_json = "1.0.91"


[[bench]]
name = "bench_babyjubjub"
harness = false

[features]
default = ["blake-hash"]
aarch64 = ["blake"]
